오류 해결 및 hover효과 적용

--- a/index.html
+++ b/index.html
@@ -487,22 +487,22 @@
         <p> <span class="point">Vol 9</span> 2020.5 MD PICK</p>
         <ul class="md-pick-list">
           <li>
-            <img src="./src/img/md-pick/md-pick01.png" alt="">
+            <a href="#"><img src="./src/img/md-pick/md-pick01.png" alt=""></a>
             <p class="item-title">세작 80g (햇차, 2020)</p>
             <p class="item-price">40,000원</p>
           </li>
           <li>
-            <img src="./src/img/md-pick/md-pick02.png" alt="">
+            <a href="#"><img src="./src/img/md-pick/md-pick02.png" alt=""></a>
             <p class="item-title">세작 10입 (햇차, 2020)</p>
             <p class="item-price">20,000원</p>
           </li>
           <li>
-            <img src="./src/img/md-pick/md-pick03.png" alt="">
+            <a href="#"><img src="./src/img/md-pick/md-pick03.png" alt=""></a>
             <p class="item-title">세작 피라미드 20입 (햇차, 2020)</p>
             <p class="item-price">25,000원</p>
           </li>
           <li>
-            <img src="./src/img/md-pick/md-pick04.png" alt="">
+            <a href="#"><img src="./src/img/md-pick/md-pick04.png" alt=""></a>
             <p class="item-title">세작 3입 (햇차, 2020)</p>
             <p class="item-price">4,800원</p>
           </li>
