--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
               </div>
             </li>
           </ol>
-          <div class="arrow-area reivew active">
-            <div class="a11y-hidden prev">prev</div>
-            <div class="a11y-hidden next">next</div>
+          <div class="arrow-area review active">
+            <a class="prev" role="button"><span class="a11y-hidden">prev</span></a>
+            <a class="next" role="button"><span class="a11y-hidden">next</span></a>
           </div>
-          <div class="progressBar reivew active">
+          <div class="progressBar review active">
             <div class="progress"> </div>
           </div>
         </div>
@@ -464,8 +464,8 @@
             </li>
           </ol>
           <div class="arrow-area sale">
-            <div class="a11y-hidden prev">prev</div>
-            <div class="a11y-hidden next">next</div>
+            <a class="prev" role="button"><span class="a11y-hidden">prev</span></a>
+            <a class="next" role="button"><span class="a11y-hidden">next</span></a>
           </div>
           <div class="progressBar sale">
             <div class="progress"> </div>
@@ -521,7 +521,7 @@
       <div class="tea-ware-shop-left">
         <h2 class="section-title">Tea ware shop</h2>
         <p class="text">다채로운 오설록의 차를 즐길 수 있는 다양한 Tea ware를 만나보세요.</p>
-        <p class="move">전체보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></p>
+        <a href="#" class="move">전체보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></a>
       </div>
       <div class="tea-ware-shop-right">
         <div class="group1">
@@ -535,8 +535,8 @@
         </div>
       </div>
       <div class="arrow-area">
-        <div class="a11y-hidden prev">prev</div>
-        <div class="a11y-hidden next">next</div>
+        <a class="prev" role="button"><span class="a11y-hidden">prev</span></a>
+        <a class="next" role="button"><span class="a11y-hidden">next</span></a>
       </div>
       <div class="progressBar">
         <div class="progress"> </div>
@@ -555,7 +555,7 @@
             <p class="price">15,000원</p>
             <p class="t-price">10,500원</p>
           </div>
-          <div class="tommorow-item-area">
+          <div class="tomorrow-item-area">
             <p class="text">내일은 이제품이 올라와요</p>
             <img src="./src/img/today-price/tommorrow-item.png" alt="">
           </div>
@@ -614,9 +614,9 @@
       <div class="slide-area">
         <div class="top">
           <ul>
-            <li><img src="./src/img/shop/slide01.jpg" alt=""></li>
-            <li><img src="./src/img/shop/slide02.jpg" alt=""></li>
-            <li><img src="./src/img/shop/slide03.jpg" alt=""></li>
+            <li><video src="https://www.osulloc.com/upload/teashop_8.mp4" muted></video></li>
+            <li><video src="https://www.osulloc.com/upload/teashop_4.mp4" autoplay muted></video></li>
+            <li><video src="https://www.osulloc.com/upload/herb.mp4" muted></video></li>
           </ul>
         </div>
         <div class="bottom">
@@ -867,7 +867,7 @@
     </div>
   </footer>
 
-  <a href="#" class="btn-top hidden"><img src="./src/img/btn_goTop.png" alt=""></a>
+  <a class="btn-top hidden"><img src="./src/img/btn_goTop.png" alt=""></a>
 
 </body>
 
