font file 정리 및 오류들 수정

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="rate">★★★★★</div>
               <p class="item-title"><a href="#">프리미엄 티 컬렉션</a></p>
               <div class="review-content">
-                <p class="review-text">선물용이라 받자마자 급하게 드리고 오느라 사진은 못찍었지만 향도 다르고</p>
+                <p class="review-text">선물용이라 받자마자 급하게 드리고 오느라 사진은 못찍었지만 향도 다르고 고급져요.</p>
                 <div class="write-info">
                   <span class="id">ism*****</span>
                   <span class="date">2020.05.17</span>
@@ -384,6 +384,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale01.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">프리미엄 티 컬렉션</a></p>
               <p class="item-price">25,000원</p>
@@ -391,7 +395,12 @@
             <li>
               <div class="image-wrap">
                 <a href="#">
-                  <img src="./src/img/review/sale02.png" alt=""></a>
+                  <img src="./src/img/review/sale02.png" alt="">
+                </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">녹차밀크스프레드 200 g</a></p>
               <p class="item-price">8,500원</p>
@@ -401,6 +410,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale03.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">그린티 롤케이크(화이트)</a></p>
               <p class="item-price">25,000원</p>
@@ -410,6 +423,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale04.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">러블리티박스</a></p>
               <p class="item-price"><a href="#">25,000원</a></p>
@@ -419,6 +436,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale05.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">웨딩그린티 3입(피라미드)</a></p>
               <p class="item-price"><a href="#">4,500 원</a></p>
@@ -428,6 +449,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale06.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">제주순수녹차 20입(티백)</a></p>
               <p class="item-price"><a href="#">6,800원</a></p>
@@ -437,6 +462,10 @@
                 <a href="#">
                   <img src="./src/img/review/sale07.png" alt="">
                 </a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">세작 40g(잎차)</a></p>
               <p class="item-price"><a href="#">17,000 원</a></p>
@@ -444,6 +473,10 @@
             <li>
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale08.png" alt=""></a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">세작 피라미드 20입 (햇차, 2020)</a></p>
               <p class="item-price"><a href="#">25,000 원</a></p>
@@ -451,6 +484,10 @@
             <li>
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale09.png" alt=""></a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">제주유채&꿀티 20입(티백)</a></p>
               <p class="item-price"><a href="#">6,800 원</a></p>
@@ -458,6 +495,10 @@
             <li>
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale10.png" alt=""></a>
+                <div class="detail hidden">
+                  <a>리뷰보기</a>
+                  <a>장바구니</a>
+                </div>
               </div>
               <p class="item-title"><a href="#">달빛걱기 20입 (피라미드))</a></p>
               <p class="item-price"><a href="#">23,000 원</a></p>
@@ -576,7 +617,7 @@
       <h2 class="section-title">뭉치면 할인 <strong>UP</strong></h2>
       <p>모이면 모일수록 커지는 할인쿠폰 혜택을 만나보세요 !</p>
       <div class="image-area">
-        <div class="left">
+        <a href="#" class="left">
           <div class="text-area">
             <div class="left">
               <p class="item-title">귤꽃향을 품은 우잣담 10입(피라미드)</p>
@@ -587,7 +628,7 @@
               <p class="s-price">목표할인가 <span>12,000원</span></p>
             </div>
           </div>
-        </div>
+        </a>
         <div class="right">
           <div class="coupon-area">
             <p class="coupon-text"><span>20%</span><br>쿠폰 지급예정</p>
