bugfix: ie filter 오류 등 해결

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>오설록, 차와 제주가 선사하는 삶의 아름다움</title>
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/font.css">
   <link rel="stylesheet" href="./src/css/index.css">
   <link rel="shortcut icon" href="/src/img/header/favicons.png">
   <script src="./src/js/jquery-1.10.2.min.js"></script>
-  <script src="./src/js/index.js"></script>
+  <script type="text/javascript" src="./src/js/index.js"></script>
 </head>
 
 <body>
@@ -94,9 +95,9 @@
         </div>
 
         <ul class="addmenu-list">
-          <li class="btn-search"><button type="button"><span class="a11y-hidden">검색</span></button></li>
-          <li class="cart"><a href="#"><span class="a11y-hidden">장바구니</span></a></li>
-          <li class="add">
+          <li class="btn-search top"><button type="button"><span class="a11y-hidden">검색</span></button></li>
+          <li class="cart top"><button type="button"><span class="a11y-hidden">장바구니</span></button></li>
+          <li class="add top">
             <span class="a11y-hidden">더보기</span>
             <ul class="add-menu">
               <li><a href="#">고객센터</a></li>
