visual slide 선택 후 애니메이션 구현 완료

--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
       <div class="slide-select-area">
         <ul>
           <li class="active">
-            <a href="#">한정판 골든 티켓 증정</a>
+            <a>한정판 골든 티켓 증정</a>
           </li>
           <li>
-            <a href="#">5월 출석체크</a>
+            <a>5월 출석체크</a>
           </li>
           <li>
-            <a href="#">차 정기구독</a>
+            <a>차 정기구독</a>
           </li>
           <li>
-            <a href="#">텅장을 위한 티타임</a>
+            <a>텅장을 위한 티타임</a>
           </li>
         </ul>
         <button class="btn-slide-state stop"><span class="a11y-hidden">슬라이드 일시정지</span></button>
