tea-ware-shop 탭 처리 및 gnb 작업 보류

--- a/index.html
+++ b/index.html
@@ -566,13 +566,24 @@
         <a href="#" class="move">전체보기 <img src="./src/img/md-pick/arr_42x12.png" alt=""></a>
       </div>
       <div class="tea-ware-shop-right">
-        <div class="group1">
-          <div class="left">
-            <div class="img-box"><a href="#"><span class="a11y-hidden">kinto</span></a></div>
-            <div class="img-box"><a href="#"><span class="a11y-hidden">seoul bund</span> </a></div>
+        <div class="wrap">
+          <div class="group1">
+            <div class="left">
+              <div class="img-box"><a href="#"><span class="a11y-hidden">kinto</span></a></div>
+              <div class="img-box"><a href="#"><span class="a11y-hidden">seoul bund</span> </a></div>
+            </div>
+            <div class="right">
+              <div class="img-box"><a href="#"><span class="a11y-hidden">torim</span></a></div>
+            </div>
           </div>
-          <div class="right">
-            <div class="img-box"><a href="#"><span class="a11y-hidden">torim</span></a></div>
+          <div class="group2">
+            <div class="left">
+              <div class="img-box"><a href="#"><span class="a11y-hidden">soilbaker</span></a></div>
+              <div class="img-box"><a href="#"><span class="a11y-hidden">sorosi</span> </a></div>
+            </div>
+            <div class="right">
+              <div class="img-box"><a href="#"><span class="a11y-hidden">kwangjuyo</span></a></div>
+            </div>
           </div>
         </div>
       </div>
