shop slide-area 영역 잡기 완료

--- a/index.html
+++ b/index.html
@@ -667,9 +667,18 @@
       <div class="slide-area">
         <div class="top">
           <ul>
-            <li><video src="https://www.osulloc.com/upload/teashop_8.mp4" muted></video></li>
-            <li><video src="https://www.osulloc.com/upload/teashop_4.mp4" autoplay muted></video></li>
-            <li><video src="https://www.osulloc.com/upload/herb.mp4" muted></video></li>
+            <li>
+              <video src="https://www.osulloc.com/upload/teashop_8.mp4" muted></video>
+            </li>
+            <li>
+              <video src="https://www.osulloc.com/upload/teashop_4.mp4" muted></video>
+            </li>
+            <li>
+              <video src="https://www.osulloc.com/upload/herb.mp4" muted></video>
+            </li>
+            <li>
+              <video src="https://www.osulloc.com/upload/teashop_3.mp4" muted></video>
+            </li>
           </ul>
         </div>
         <div class="bottom">
