--- a/index.html
+++ b/index.html
@@ -668,36 +668,29 @@
         <div class="top">
           <ul>
             <li>
-              <video src="https://www.osulloc.com/upload/teashop_8.mp4" muted></video>
+              <video src="https://www.osulloc.com/upload/teashop_8.mp4" mute preload="auto"></video>
             </li>
             <li>
-              <video src="https://www.osulloc.com/upload/teashop_4.mp4" muted></video>
+              <video src="https://www.osulloc.com/upload/teashop_4.mp4" mute preload="auto"></video>
             </li>
             <li>
-              <video src="https://www.osulloc.com/upload/herb.mp4" muted></video>
+              <video src="https://www.osulloc.com/upload/herb.mp4" mute preload="auto"></video>
             </li>
             <li>
-              <video src="https://www.osulloc.com/upload/teashop_3.mp4" muted></video>
+              <video src="https://www.osulloc.com/upload/teashop_3.mp4" mute preload="auto"></video>
             </li>
           </ul>
         </div>
         <div class="bottom">
           <ul class="shop-list">
-            <li>명차</li>
-            <li class="active">녹차/발효차/홍차</li>
+            <li class="active">명차</li>
+            <li>녹차/발효차/홍차</li>
             <li>허브티(무카페인)</li>
             <li>블렌디드티</li>
-            <li>웰니스티</li>
-            <li>파우더</li>
-            <li>세트</li>
-            <li>오피스몰</li>
-            <li>베이커리</li>
-            <li>기프트몰</li>
-            <li>라이프스타일몰</li>
           </ul>
           <div class="arrow-area">
             <div class="prev"><span class="a11y-hidden">prev</span></div>
-            <div class="a11y-hidden next"><span class="a11y-hidden">next</span>
+            <div class="next"><span class="a11y-hidden">next</span>
             </div>
           </div>
         </div>
