bugfix: header focus 버그 수정, js code 정리

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-title" content="오설록">
   <title>오설록, 차와 제주가 선사하는 삶의 아름다움</title>
   <meta name="description" content="오설록 웹사이트">
-  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link href="./src/img/header/favicons.ico" rel="shortcut icon" type="image/x-icon" />
   <link rel="stylesheet" href="./src/css/reset.css" />
   <link rel="stylesheet" href="./src/css/font.css" />
   <link rel="stylesheet" href="./src/css/index.css" />
@@ -108,7 +108,7 @@
             <button type="button"><span class="a11y-hidden">장바구니</span></button>
           </li>
           <li class="add top">
-            <span class="a11y-hidden">더보기</span>
+            <a href="#" class="a11y-hidden" role="button">더보기</a>
             <ul class="add-menu">
               <li><a href="#">고객센터</a></li>
               <li><a href="#">매장찾기</a></li>
@@ -149,16 +149,16 @@
       <div class="slide-select-area">
         <ul>
           <li class="active">
-            <a>한정판 골든 티켓 증정</a>
+            <a href="#">한정판 골든 티켓 증정</a>
           </li>
           <li>
-            <a>5월 출석체크</a>
+            <a href="#">5월 출석체크</a>
           </li>
           <li>
-            <a>차 정기구독</a>
+            <a href="#">차 정기구독</a>
           </li>
           <li>
-            <a>텅장을 위한 티타임</a>
+            <a href="#">텅장을 위한 티타임</a>
           </li>
         </ul>
         <button class="btn-slide-state stop"><span class="a11y-hidden">슬라이드 일시정지</span></button>
@@ -181,8 +181,8 @@
                   <img src="./src/img/review/review01.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -201,8 +201,8 @@
                   <img src="./src/img/review/review02.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -221,8 +221,8 @@
                   <img src="./src/img/review/review03.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★☆</div>
@@ -241,8 +241,8 @@
                   <img src="./src/img/review/review04.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -261,8 +261,8 @@
                   <img src="./src/img/review/review05.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -281,8 +281,8 @@
                   <img src="./src/img/review/review06.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -301,8 +301,8 @@
                   <img src="./src/img/review/review07.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -321,8 +321,8 @@
                   <img src="./src/img/review/review08.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★★</div>
@@ -341,8 +341,8 @@
                   <img src="./src/img/review/review09.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★☆</div>
@@ -361,8 +361,8 @@
                   <img src="./src/img/review/review10.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <div class="rate">★★★★☆</div>
@@ -395,8 +395,8 @@
                   <img src="./src/img/review/sale01.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">프리미엄 티 컬렉션</a></p>
@@ -408,8 +408,8 @@
                   <img src="./src/img/review/sale02.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">녹차밀크스프레드 200 g</a></p>
@@ -421,8 +421,8 @@
                   <img src="./src/img/review/sale03.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">그린티 롤케이크(화이트)</a></p>
@@ -434,8 +434,8 @@
                   <img src="./src/img/review/sale04.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">러블리티박스</a></p>
@@ -447,8 +447,8 @@
                   <img src="./src/img/review/sale05.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">웨딩그린티 3입(피라미드)</a></p>
@@ -460,8 +460,8 @@
                   <img src="./src/img/review/sale06.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">제주순수녹차 20입(티백)</a></p>
@@ -473,8 +473,8 @@
                   <img src="./src/img/review/sale07.png" alt="" />
                 </a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">세작 40g(잎차)</a></p>
@@ -484,8 +484,8 @@
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale08.png" alt="" /></a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">세작 피라미드 20입 (햇차, 2020)</a></p>
@@ -495,8 +495,8 @@
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale09.png" alt="" /></a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">제주유채&꿀티 20입(티백)</a></p>
@@ -506,8 +506,8 @@
               <div class="image-wrap">
                 <a href="#"><img src="./src/img/review/sale10.png" alt="" /></a>
                 <div class="detail hidden">
-                  <a>리뷰보기</a>
-                  <a>장바구니</a>
+                  <a href="#">리뷰보기</a>
+                  <a href="#">장바구니</a>
                 </div>
               </div>
               <p class="item-title"><a href="#">달빛걱기 20입 (피라미드))</a></p>
